# LightGlue-ONNX

./: .gitignore  AGENTS.md  LICENSE  README.md  demo.ipynb  export.py  pyproject.toml
docs/: README.ja.md  README.zh.md
evaluation/: EVALUATION.md
lightglue_dynamo/: cli.py  cli_utils.py  config.py
lightglue_dynamo/models/: __init__.py  aliked.py  lightglue.py  pipeline.py  raco.py  superpoint.py
lightglue_dynamo/models/disk/: disk.py
lightglue_dynamo/ops/: __init__.py  multi_head_attention.py
lightglue_dynamo/preprocessors/: __init__.py  cuda.py  io.py  raco.py
lightglue_dynamo/scripts/: benchmark.py  quantize.py  quantize_ranker_fp8.py
lightglue_onnx/: lightglue.py
lightglue_onnx/aliked/: aliked.py  blocks.py  soft_detect.py
tests/: test_cli_smoke.py  test_cuda_preprocessing.py  test_extractors_batch.py  test_lightglue_batch.py  test_preprocessing_io.py  test_raco.py
web/: index.html  main.js  serve.py  style.css
